Bug 1623980 - Always wrap tip results at narrow window widths. r=dao
Differential Revision: https://phabricator.services.mozilla.com/D68077

UltraBlame original commit: 156272adf90c5f0fafb50747e4f07dd6bd80bf26

--- a/browser/themes/shared/urlbar-autocomplete.inc.css
+++ b/browser/themes/shared/urlbar-autocomplete.inc.css
@@ -144,6 +144,7 @@
 }
 
 
+
 @media screen and (min-height: 600px) {
   .urlbarView.megabar .urlbarView-results[wrap] > .urlbarView-row > .urlbarView-row-inner {
     flex-wrap: wrap;
@@ -163,6 +164,13 @@
   .urlbarView.megabar .urlbarView-results[wrap] > .urlbarView-row[type=remotetab]:-moz-any(:hover, [selected]) > .urlbarView-row-inner > .urlbarView-no-wrap > .urlbarView-title-separator {
     display: none;
   }
+}
+
+
+
+
+.urlbarView.megabar .urlbarView-results[wrap] > .urlbarView-row[type=tip] > .urlbarView-row-inner {
+  flex-wrap: wrap;
 }
 
 .urlbarView-row:not([type=tip]) > .urlbarView-row-inner > .urlbarView-no-wrap > .urlbarView-title[overflow],
